<resources>
    <string name="app_name">chunithm</string>
    <string name="overpower">OVERPOWER</string>
    <string name="text1">プレイ前</string>
    <string name="text2">プレイ後</string>
    <string name="title">Title</string>
    <string name="score">Score</string>
    <string name="calculate">Calculate</string>
    <string name="prog1">入力ミス</string>
    <string name="aj">AJ</string>
    <string name="fc">FC</string>
    <string name="no">No</string>
    <string name="memolist">MemoList</string>
    <string name="save">SAVE</string>
    <string name="data">Data</string>
    <string name="memo">Memo</string>
    <string name="delete">Delete</string>
</resources>
